fixed huge spacing in tables probably for main html

--- a/@Flask/5018_cell/static/style.css
+++ b/@Flask/5018_cell/static/style.css
@@ -3056,11 +3056,11 @@ Markdown Table Styles */
 }
 
 .md-cell {
-    padding: 1px 12px !important;
+    padding: 2px 12px !important;
     border: none !important;
     border-right: 3px solid #000000 !important;
     background: transparent !important;
-    overflow: hidden !important;
+    overflow: visible !important;
     word-break: break-word !important;
     white-space: normal !important;
     min-width: 80px;
